manifests/dev-tilt/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-ui
spec:
  selector:
    matchLabels:
      app: argocd-ui
  template:
    metadata:
      labels:
        app: argocd-ui
    spec:
      containers:
        - name: argocd-ui
          image: argocd-ui
          ports:
            - containerPort: 4000
              name: http
